--- a/package.json
+++ b/package.json
@@ -30,15 +30,15 @@
     "ionicframework"
   ],
   "dependencies": {
-    "@angular-devkit/architect": "0.9.0-beta.3",
-    "@angular-devkit/build-angular": "0.9.0-beta.3",
-    "@angular-devkit/core": "0.9.0-beta.3",
-    "@angular-devkit/schematics": "0.9.0-beta.3",
     "@schematics/angular": "0.9.0-beta.3",
     "tslib": "^1.9.0",
     "typescript": "3.0.1"
   },
   "devDependencies": {
+    "@angular-devkit/architect": "0.9.0-beta.3",
+    "@angular-devkit/build-angular": "0.9.0-beta.3",
+    "@angular-devkit/core": "0.9.0-beta.3",
+    "@angular-devkit/schematics": "0.9.0-beta.3",
     "@semantic-release/changelog": "^3.0.0",
     "@semantic-release/git": "^7.0.4",
     "@semantic-release/github": "^5.0.6",
@@ -54,6 +54,12 @@
     "semantic-release": "^15.9.17",
     "tslint": "^5.9.1",
     "tslint-ionic-rules": "0.0.19"
+  },
+  "peerDependencies": {
+    "@angular-devkit/architect": "0.9.0-beta.3",
+    "@angular-devkit/build-angular": "0.9.0-beta.3",
+    "@angular-devkit/core": "0.9.0-beta.3",
+    "@angular-devkit/schematics": "0.9.0-beta.3"
   },
   "builders": "./builders.json",
   "schematics": "./collection.json",
