chore(lint): use lint-staged in commit hook

--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
   "schematics": "./collection.json",
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
