--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ionic-team/angular-toolkit"
+    "url": "https://github.com/ionic-team/angular-toolkit.git"
   },
   "bugs": {
     "url": "https://github.com/ionic-team/angular-toolkit/issues"
