chore(ci): clear cache
need to pull in this fix: https://github.com/semantic-release/release-notes-generator/commit/a5cd99479eca71c1d92845786863ca05dd2ad11b

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,10 +3,10 @@ version: 2
 aliases:
   - &restore-cache
       keys:
-        - dependency-cache-{{ checksum "package.json" }}
+        - dependency-cache-{{ checksum "package.json" }}-1
 
   - &save-cache
-      key: dependency-cache-{{ checksum "package.json" }}
+      key: dependency-cache-{{ checksum "package.json" }}-1
       paths:
         - node_modules
 
