--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://ionicframework.com/",
   "author": "Ionic Team <hi@ionicframework.com> (https://ionicframework.com)",
   "scripts": {
-    "lint": "tslint --config tslint.js --project tsconfig.json",
+    "lint": "tslint --project tsconfig.json",
     "build": "tsc",
     "watch": "tsc -w",
     "prepublishOnly": "npm run build",
@@ -52,8 +52,8 @@
     "lint-staged": "^8.0.3",
     "rimraf": "^2.6.2",
     "semantic-release": "^15.9.17",
-    "tslint": "^5.9.1",
-    "tslint-ionic-rules": "0.0.19"
+    "tslint": "^5.12.0",
+    "tslint-ionic-rules": "0.0.21"
   },
   "peerDependencies": {
     "@angular-devkit/architect": ">=0.7.2",
