--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
   "dependencies": {
     "@schematics/angular": "^7.0.3",
     "tslib": "^1.9.0",
-    "typescript": "^3.1.5"
+    "typescript": "~3.1.0"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.10.3",
-    "@angular-devkit/build-angular": "^0.10.3",
-    "@angular-devkit/core": "^7.0.3",
-    "@angular-devkit/schematics": "^7.0.3",
+    "@angular-devkit/architect": "^0.11.3",
+    "@angular-devkit/build-angular": "^0.11.3",
+    "@angular-devkit/core": "^7.1.3",
+    "@angular-devkit/schematics": "^7.1.3",
     "@semantic-release/changelog": "^3.0.0",
     "@semantic-release/git": "^7.0.4",
     "@semantic-release/github": "^5.0.6",
