--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
   "dependencies": {
     "@schematics/angular": "^7.0.3",
     "tslib": "^1.9.0",
-    "typescript": "~3.1.0"
+    "typescript": "^3.2.4"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.11.3",
-    "@angular-devkit/build-angular": "^0.11.3",
+    "@angular-devkit/architect": "^0.12.3",
+    "@angular-devkit/build-angular": "^0.12.3",
     "@angular-devkit/core": "^7.1.3",
     "@angular-devkit/schematics": "^7.1.3",
     "@semantic-release/changelog": "^3.0.0",
