feat(component): add custom component schematic (#68)
This feature better aligns lazy-loaded page structure (a default of Ionic 4) with generated components.

Previously, generating a component would register the component with the root module, which would make it unavailable in all pages that were lazy-loaded. 

The new component schematic offers a new option: `--createModule`. It can be combined with other options such as `--module` and `--export` to handle several use cases.

* test1: Generates a component and does not register it.
* test2: Generates a component with an NgModule, but does not register it.
* test3: Generates a component with an NgModule and registers the module with tab1's NgModule.
* test4: Generates a component and registers the component with tab1's NgModule.
* test5: Generates a component, registers the component with a component NgModule, and exports it from that NgModule.

```
ng g component test1
ng g component test2 --createModule
ng g component test3 --createModule --module /src/app/tab1/tab1.module.ts
ng g component test4 --entryComponent --module /src/app/tab1/tab1.module.ts
ng g component test5 --export --module /src/app/components.module.ts
```

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,16 +10,9 @@
     "pretty": true,
     "strict": true,
     "target": "es2017",
-    "lib": [
-      "es2017"
-    ]
+    "lib": ["es2017"],
+    "plugins": [{ "name": "typescript-tslint-plugin" }]
   },
-  "include": [
-    "**/*.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "**/__tests__/*.ts",
-    "schematics/*/files"
-  ]
+  "include": ["**/*.ts"],
+  "exclude": ["node_modules", "**/__tests__/*.ts", "schematics/*/files"]
 }
