--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
   "devDependencies": {
     "@angular-devkit/architect": "^0.12.3",
     "@angular-devkit/build-angular": "^0.12.3",
-    "@angular-devkit/core": "^7.1.3",
-    "@angular-devkit/schematics": "^7.1.3",
+    "@angular-devkit/core": "~7.2.0",
+    "@angular-devkit/schematics": "~7.2.0",
     "@semantic-release/changelog": "^3.0.0",
     "@semantic-release/git": "^7.0.4",
     "@semantic-release/github": "^5.0.6",
@@ -53,7 +53,8 @@
     "rimraf": "^2.6.2",
     "semantic-release": "^15.9.17",
     "tslint": "^5.12.0",
-    "tslint-ionic-rules": "0.0.21"
+    "tslint-ionic-rules": "0.0.21",
+    "typescript-tslint-plugin": "0.3.1"
   },
   "peerDependencies": {
     "@angular-devkit/architect": ">=0.7.2",
