--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   "dependencies": {
     "@schematics/angular": "^7.0.3",
     "tslib": "^1.9.0",
-    "typescript": "^3.2.4"
+    "typescript": "^3.2.4",
+    "ws": "^6.1.4"
   },
   "devDependencies": {
     "@angular-devkit/architect": "0.13.1",
@@ -46,6 +47,7 @@
     "@types/node": "^8.10.34",
     "@types/webpack": "^4.4.14",
     "@types/webpack-dev-server": "^3.1.1",
+    "@types/ws": "^6.0.1",
     "commitizen": "^3.0.2",
     "cz-conventional-changelog": "^2.1.0",
     "husky": "^1.1.1",
