--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
   "dependencies": {
     "@schematics/angular": "^7.0.3",
     "tslib": "^1.9.0",
-    "typescript": "^3.2.4",
+    "typescript": "~3.3.3333",
     "ws": "^6.1.4"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "0.13.1",
-    "@angular-devkit/build-angular": "0.13.1",
-    "@angular-devkit/core": "7.3.1",
-    "@angular-devkit/schematics": "7.3.1",
+    "@angular-devkit/architect": "0.13.6",
+    "@angular-devkit/build-angular": "0.13.6",
+    "@angular-devkit/core": "7.3.6",
+    "@angular-devkit/schematics": "7.3.6",
     "@semantic-release/changelog": "^3.0.0",
     "@semantic-release/git": "^7.0.4",
     "@semantic-release/github": "^5.0.6",
