--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
   ],
   "dependencies": {
     "@schematics/angular": "^8.0.0",
+    "cheerio": "1.0.0-rc.3",
+    "colorette": "1.1.0",
+    "copy-webpack-plugin": "5.1.1",
     "tslib": "^1.9.0",
     "ws": "^7.0.1"
   },
@@ -43,6 +46,9 @@
     "@semantic-release/git": "^7.0.4",
     "@semantic-release/github": "^5.0.6",
     "@semantic-release/npm": "^5.0.4",
+    "@types/cheerio": "0.22.15",
+    "@types/copy-webpack-plugin": "5.0.0",
+    "@types/karma": "3.0.5",
     "@types/node": "^8.10.34",
     "@types/webpack": "^4.4.14",
     "@types/webpack-dev-server": "^3.1.1",
@@ -50,6 +56,7 @@
     "commitizen": "^4.0.3",
     "cz-conventional-changelog": "^3.1.0",
     "husky": "^4.0.10",
+    "karma": "4.4.1",
     "lint-staged": "^10.0.4",
     "rimraf": "^3.0.1",
     "semantic-release": "^15.9.17",
