--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "semantic-release": "^15.9.17",
     "tslint": "^5.12.0",
     "tslint-ionic-rules": "0.0.21",
-    "typescript": "~3.5.3",
+    "typescript": "3.7.4",
     "typescript-tslint-plugin": "0.5.5"
   },
   "peerDependencies": {
