fix(cordovaserve): update copy-webpack to new format (#272)
Update outdated types and usage of copy-webpack-plugin

Closes #265

--- a/package.json
+++ b/package.json
@@ -38,16 +38,16 @@
     "ws": "^7.0.1"
   },
   "devDependencies": {
-    "@angular-devkit/architect": ">=0.803.0",
-    "@angular-devkit/build-angular": ">=0.803.0",
-    "@angular-devkit/core": ">=8.0.0",
-    "@angular-devkit/schematics": ">=8.0.0",
+    "@angular-devkit/architect": "^0.1000.7",
+    "@angular-devkit/build-angular": "^0.1000.7",
+    "@angular-devkit/core": "^10.0.7",
+    "@angular-devkit/schematics": "^10.0.7",
     "@semantic-release/changelog": "^3.0.0",
     "@semantic-release/git": "^7.0.4",
     "@semantic-release/github": "^5.0.6",
     "@semantic-release/npm": "^5.0.4",
     "@types/cheerio": "0.22.15",
-    "@types/copy-webpack-plugin": "5.0.0",
+    "@types/copy-webpack-plugin": "^6.0.0",
     "@types/karma": "3.0.5",
     "@types/node": "^8.10.34",
     "@types/webpack": "^4.4.14",
