feat(): update to support angular 11 Closes #388 BREAKING: this update bumps the angular deps to the latest major release. This is not backwards compatible. If you are not updating to angular 11, please stay on the 2.x release of Angular Toolkit. In order to migrate, please see https://update.angular.io

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,16 @@
     "noFallthroughCasesInSwitch": true,
     "noUnusedLocals": true,
     "pretty": true,
+    "skipLibCheck": true,
     "strict": true,
-    "target": "es2017",
-    "lib": ["es2017"],
-    "plugins": [{ "name": "typescript-tslint-plugin" }]
+    "target": "es2018",
+    "lib": [
+      "es2018"
+    ],
+    "plugins": [{ "name": "typescript-tslint-plugin" }],
+    "typeRoots": [
+      "./node_modules/@types"
+    ]
   },
   "include": ["**/*.ts"],
   "exclude": ["node_modules", "**/__tests__/*.ts", "schematics/*/files"]
