--- a/package.json
+++ b/package.json
@@ -30,18 +30,21 @@
     "ionicframework"
   ],
   "dependencies": {
-    "@schematics/angular": ">=8.0.0",
+    "@schematics/angular": "^11.0.0",
     "cheerio": "1.0.0-rc.3",
     "colorette": "1.1.0",
     "copy-webpack-plugin": "^6.0.3",
-    "tslib": "^1.9.0",
+    "tapable": "^2.1.1",
+    "tslib": "^2.0.3",
     "ws": "^7.0.1"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1000.7",
-    "@angular-devkit/build-angular": "^0.1000.7",
-    "@angular-devkit/core": "^10.0.7",
-    "@angular-devkit/schematics": "^10.0.7",
+    "@angular-devkit/architect": "^0.1100.0",
+    "@angular-devkit/build-angular": "^0.1100.0",
+    "@angular-devkit/core": "^11.0.0",
+    "@angular-devkit/schematics": "^11.0.0",
+    "@angular/compiler": "^11.0.0",
+    "@angular/compiler-cli": "^11.0.0",
     "@semantic-release/changelog": "^3.0.0",
     "@semantic-release/git": "^7.0.4",
     "@semantic-release/github": "^5.0.6",
@@ -49,10 +52,12 @@
     "@types/cheerio": "0.22.15",
     "@types/copy-webpack-plugin": "^6.0.0",
     "@types/karma": "3.0.5",
-    "@types/node": "^8.10.34",
-    "@types/webpack": "^4.4.14",
-    "@types/webpack-dev-server": "^3.1.1",
+    "@types/node": "10.12.30",
+    "@types/webpack": "^4.41.22",
+    "@types/webpack-dev-server": "^3.1.7",
+    "@types/webpack-sources": "^2.0.0",
     "@types/ws": "^7.2.1",
+    "@types/tapable": "1.0.4",
     "commitizen": "^4.1.2",
     "cz-conventional-changelog": "^3.1.0",
     "husky": "^4.0.10",
@@ -62,7 +67,7 @@
     "semantic-release": "^15.9.17",
     "tslint": "^5.12.0",
     "tslint-ionic-rules": "0.0.21",
-    "typescript": "3.7.4",
+    "typescript": "4.0.5",
     "typescript-tslint-plugin": "0.5.5"
   },
   "peerDependencies": {
