--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "homepage": "https://ionicframework.com/",
   "author": "Ionic Team <hi@ionicframework.com> (https://ionicframework.com)",
   "scripts": {
-    "lint": "tslint --project tsconfig.json",
+    "lint": "npm run eslint",
+    "fmt": "npm run eslint -- --fix",
+    "eslint": "eslint . --ext .ts",
     "build": "tsc",
     "watch": "tsc -w",
     "prepublishOnly": "npm run build",
@@ -45,6 +47,8 @@
     "@angular-devkit/schematics": "^11.1.0",
     "@angular/compiler": "^11.1.0",
     "@angular/compiler-cli": "^11.1.0",
+    "@ionic/eslint-config": "^0.3.0",
+    "@ionic/prettier-config": "^1.0.1",
     "@semantic-release/changelog": "^3.0.0",
     "@semantic-release/git": "^7.0.4",
     "@semantic-release/github": "^5.0.6",
@@ -58,17 +62,22 @@
     "@types/webpack-dev-server": "^3.1.7",
     "@types/webpack-sources": "^2.0.0",
     "@types/ws": "^7.2.1",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
     "commitizen": "^4.1.2",
     "cz-conventional-changelog": "^3.1.0",
+    "eslint": "^7.19.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.1",
     "husky": "^4.0.10",
     "karma": "^5.1.1",
     "lint-staged": "^10.0.4",
     "rimraf": "^3.0.1",
     "semantic-release": "^15.9.17",
-    "tslint": "^5.12.0",
-    "tslint-ionic-rules": "0.0.21",
     "typescript": "4.0.5",
-    "typescript-tslint-plugin": "0.5.5"
+    "typescript-eslint-language-service": "^4.1.3"
   },
   "peerDependencies": {
     "@angular-devkit/architect": "^0.1101.0",
@@ -110,6 +119,29 @@
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "prettier": "@ionic/prettier-config",
+  "eslintConfig": {
+    "root": true,
+    "ignorePatterns": [
+      "node_modules",
+      "**/*.d.ts",
+      "schematics/**/files"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+      "project": "./tsconfig.json"
+    },
+    "plugins": [
+      "@typescript-eslint",
+      "prettier"
+    ],
+    "extends": [
+      "@ionic/eslint-config/recommended"
+    ],
+    "rules": {
+      "prettier/prettier": "error"
     }
   }
 }
