--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "ionicframework"
   ],
   "dependencies": {
-    "@schematics/angular": "^11.2.4",
+    "@schematics/angular": "^12.0.0",
     "cheerio": "1.0.0-rc.3",
     "colorette": "1.1.0",
     "copy-webpack-plugin": "^6.2.1",
@@ -41,12 +41,12 @@
     "ws": "^7.0.1"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1102.4",
-    "@angular-devkit/build-angular": "^0.1102.4",
-    "@angular-devkit/core": "^11.2.4",
-    "@angular-devkit/schematics": "^11.2.4",
-    "@angular/compiler": "^11.2.5",
-    "@angular/compiler-cli": "^11.2.5",
+    "@angular-devkit/architect": "^0.1200.0",
+    "@angular-devkit/build-angular": "^12.0.1",
+    "@angular-devkit/core": "^12.0.1",
+    "@angular-devkit/schematics": "^12.0.0",
+    "@angular/compiler": "^12.0.0",
+    "@angular/compiler-cli": "^12.0.0",
     "@ionic/eslint-config": "^0.3.0",
     "@ionic/prettier-config": "^1.0.1",
     "@semantic-release/changelog": "^3.0.0",
@@ -64,7 +64,7 @@
     "@types/ws": "^7.2.1",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
-    "commitizen": "^4.1.2",
+    "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.1.0",
     "eslint": "^7.19.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -72,18 +72,17 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^4.0.10",
-    "karma": "^5.1.1",
+    "karma": "^6.3.2",
     "lint-staged": "^10.0.4",
+    "prettier": "^2.3.0",
     "rimraf": "^3.0.1",
     "semantic-release": "^15.9.17",
-    "typescript": "4.0.5",
+    "typescript": "4.2.4",
     "typescript-eslint-language-service": "^4.1.3"
   },
   "peerDependencies": {
-    "@angular-devkit/architect": "^0.1102.4",
-    "@angular-devkit/build-angular": "^0.1102.4",
-    "@angular-devkit/core": "^11.2.4",
-    "@angular-devkit/schematics": "^11.2.4"
+    "@angular-devkit/architect": "^0.1200.0",
+    "@angular-devkit/schematics": "^12.0.0"
   },
   "builders": "./builders.json",
   "schematics": "./collection.json",
