--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@ionic/angular-toolkit",
   "version": "4.0.0",
+  "license": "MIT",
   "description": "Schematics and builders for @ionic/angular apps.",
   "homepage": "https://ionicframework.com/",
   "author": "Ionic Team <hi@ionicframework.com> (https://ionicframework.com)",
