--- a/package.json
+++ b/package.json
@@ -33,21 +33,21 @@
     "ionicframework"
   ],
   "dependencies": {
-    "@schematics/angular": "^12.0.0",
+    "@schematics/angular": "^12.1.1",
     "cheerio": "1.0.0-rc.4",
     "colorette": "1.1.0",
-    "copy-webpack-plugin": "^6.2.1",
-    "tapable": "^2.1.1",
+    "copy-webpack-plugin": "^9.0.1",
+    "tapable": "^2.2.0",
     "tslib": "^2.0.3",
     "ws": "^7.0.1"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1200.0",
-    "@angular-devkit/build-angular": "^12.0.1",
-    "@angular-devkit/core": "^12.0.1",
-    "@angular-devkit/schematics": "^12.0.0",
-    "@angular/compiler": "^12.0.0",
-    "@angular/compiler-cli": "^12.0.0",
+    "@angular-devkit/architect": "^0.1201.1",
+    "@angular-devkit/build-angular": "^12.1.1",
+    "@angular-devkit/core": "^12.1.1",
+    "@angular-devkit/schematics": "^12.1.1",
+    "@angular/compiler": "^12.1.1",
+    "@angular/compiler-cli": "^12.1.1",
     "@ionic/eslint-config": "^0.3.0",
     "@ionic/prettier-config": "^1.0.1",
     "@semantic-release/changelog": "^3.0.0",
@@ -55,11 +55,10 @@
     "@semantic-release/github": "^5.0.6",
     "@semantic-release/npm": "^5.0.4",
     "@types/cheerio": "0.22.15",
-    "@types/copy-webpack-plugin": "^6.0.0",
+    "@types/copy-webpack-plugin": "^8.0.1",
     "@types/karma": "3.0.5",
-    "@types/node": "10.12.30",
+    "@types/node": "^14.17.5",
     "@types/tapable": "1.0.4",
-    "@types/webpack": "^4.41.22",
     "@types/webpack-dev-server": "^3.1.7",
     "@types/webpack-sources": "^2.0.0",
     "@types/ws": "^7.2.1",
@@ -82,7 +81,7 @@
     "typescript-eslint-language-service": "^4.1.3"
   },
   "peerDependencies": {
-    "@angular-devkit/architect": "^0.1200.0",
+    "@angular-devkit/architect": "^0.1201.1",
     "@angular-devkit/schematics": "^12.0.0"
   },
   "builders": "./builders.json",
