feat(): split tooling (#465)
* feat: split packages and create mono-repo

this splits angular-toolkit into two packages. @ionic/angular-toolkit provides schematics for
angular. @ionic/cordova-builders provides a collection of custom builders for ionic/angular +
cordova app

BREAKING CHANGE: ionic/angular + cordova users will now need to install @ionic/cordova-builders and
update their angular.json to reflect the new package name

* chore(): fix package description

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 node_modules
 **/*.js
 **/*.d.ts
-!builders/**/schema.d.ts
-!schematics/**/schema.d.ts
-!schematics/*/files/**/*
+!packages/cordova-builders/**/schema.d.ts
+!packages/cordova-builders/assets/*
+!packages/schematics/**/schema.d.ts
+!packages/schematics/*/files/**/*
+!packages/**/lint-staged.config.js
 .vscode
