--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "@ionic/angular-toolkit",
   "version": "5.0.3",
   "license": "MIT",
   "description": "Schematics and builders for @ionic/angular apps.",
   "homepage": "https://ionicframework.com/",
   "author": "Ionic Team <hi@ionicframework.com> (https://ionicframework.com)",
   "scripts": {
-    "lint": "npm run eslint",
-    "fmt": "npm run eslint -- --fix",
-    "eslint": "eslint . --ext .ts",
-    "build": "tsc",
-    "watch": "tsc -w",
+    "bootstrap": "lerna bootstrap && npm run build",
+    "build": "lerna run build",
+    "lint": "lerna run lint",
+    "lint:fix": "lerna run lint -- -- --fix",
     "prepublishOnly": "npm run build",
+    "publish:testing": "lerna publish prerelease --preid=testing --exact --no-git-tag-version --no-push --dist-tag=testing",
+    "publish:ci": "lerna publish -m 'chore(release): publish [skip ci]' --exact --conventional-commits --yes",
+    "publish:ci:testing": "lerna publish prerelease --preid=testing --no-git-tag-version --no-push --dist-tag=testing  -m 'chore(release): publish [skip ci]' --exact --conventional-commits --yes",
     "cz": "git-cz"
   },
   "repository": {
@@ -32,88 +33,20 @@
     "ionic framework",
     "ionicframework"
   ],
-  "dependencies": {
-    "@angular-devkit/architect": ">=0.1200.0 <0.1300",
-    "@angular-devkit/build-angular": "^12.0.0",
-    "@angular-devkit/core": "^12.1.1",
-    "@angular-devkit/schematics": "^12.0.0",
-    "@schematics/angular": "^12.0.0",
-    "cheerio": "1.0.0-rc.10",
-    "colorette": "1.1.0",
-    "copy-webpack-plugin": "^9.0.1",
-    "tapable": "^2.2.0",
-    "tslib": "^2.0.3",
-    "ws": "^7.0.1"
-  },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1201.1",
-    "@angular-devkit/build-angular": "^12.1.1",
-    "@angular-devkit/core": "^12.1.1",
-    "@angular-devkit/schematics": "^12.1.1",
-    "@angular/compiler": "^12.1.1",
-    "@angular/compiler-cli": "^12.1.1",
     "@ionic/eslint-config": "^0.3.0",
-    "@ionic/prettier-config": "^1.0.1",
-    "@semantic-release/changelog": "^3.0.0",
-    "@semantic-release/git": "^7.0.4",
-    "@semantic-release/github": "^5.0.6",
-    "@semantic-release/npm": "^5.0.4",
-    "@types/cheerio": "0.22.15",
-    "@types/copy-webpack-plugin": "^8.0.1",
-    "@types/karma": "3.0.5",
-    "@types/node": "^14.17.5",
-    "@types/tapable": "1.0.4",
-    "@types/webpack-dev-server": "^3.1.7",
-    "@types/webpack-sources": "^2.0.0",
-    "@types/ws": "^7.2.1",
-    "@typescript-eslint/eslint-plugin": "^4.15.0",
-    "@typescript-eslint/parser": "^4.15.0",
+    "@ionic/prettier-config": "^2.0.0",
     "commitizen": "^4.2.4",
-    "cz-conventional-changelog": "^3.1.0",
-    "eslint": "^7.19.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "husky": "^4.0.10",
-    "karma": "^6.3.2",
-    "lint-staged": "^10.0.4",
-    "prettier": "^2.3.0",
-    "rimraf": "^3.0.1",
-    "semantic-release": "^15.9.17",
-    "typescript": "4.2.4",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
+    "lerna": "^4.0.0",
+    "prettier": "^2.4.1",
+    "typescript": ">=4.4.2 <4.5",
     "typescript-eslint-language-service": "^4.1.3"
-  },
-  "builders": "./builders.json",
-  "schematics": "./collection.json",
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "release": {
-    "branch": "stable",
-    "verifyConditions": [
-      "@semantic-release/changelog",
-      "@semantic-release/npm",
-      "@semantic-release/github",
-      "@semantic-release/git"
-    ],
-    "prepare": [
-      "@semantic-release/changelog",
-      "@semantic-release/npm",
-      "@semantic-release/git"
-    ],
-    "publish": [
-      "@semantic-release/github",
-      "@semantic-release/npm"
-    ],
-    "success": [
-      "@semantic-release/github"
-    ],
-    "fail": [
-      "@semantic-release/github"
-    ]
   },
   "config": {
     "commitizen": {
@@ -126,7 +59,7 @@
     "ignorePatterns": [
       "node_modules",
       "**/*.d.ts",
-      "schematics/**/files"
+      "packages/schematics/**/files"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
