--- a/packages/schematics/package.json
+++ b/packages/schematics/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ionic/angular-toolkit",
-  "version": "5.0.4-testing.4",
+  "version": "5.0.4",
   "license": "MIT",
   "description": "Schematics for @ionic/angular apps.",
   "homepage": "https://ionicframework.com/",
