--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,9 +25,9 @@ jobs:
           key: ${{ runner.OS }}-dependency-cache-${{ hashFiles('**/package.json') }}
       - run: npm install
       - run: npm run bootstrap
-      - run: npm run publish:ci -- --yes
+      - run: npm run publish:ci
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GIT_AUTHOR_NAME: Ionitron
           GIT_AUTHOR_EMAIL: hi@ionicframework.com
           GIT_COMMITTER_NAME: Ionitron
