--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,9 +13,9 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
-          node-version: 14.x
+          node-version: 16
       - name: Configure Identity
         run: |
           git config user.name github-actions
